--- a/templates/about.html
+++ b/templates/about.html
@@ -52,9 +52,9 @@ button:hover, a:hover {
 
 <div class="card">
   <img src="./static/avatar.jpg" alt="John" style="width:87%">
-  <h1><span style="color: #3f9ce8;">Name : </span>Jhon Doe</h1>
-  <h2><span style="color: #3f9ce8;">Mail : </span>pavan@gmail.com</h2>
-  <h2><span style="color: #3f9ce8;">Password : </span>Pavan@123</h2>
+  <h1><span style="color: #3f9ce8;">Name : </span>{{name}}</h1>
+  <h2><span style="color: #3f9ce8;">Mail : </span>{{password}}</h2>
+  <h2><span style="color: #3f9ce8;">Password : </span></h2>
   
  
   <p><button>My Profile</button></p>
